examples/errors/27_delete_invalid_type/delete_invalid_type.txy
# Explodiu o Texty silenciosamente antes mesmo do GCC rodar

struct Node
    value: int;
endstruct;

proc main()
    println("=================== PROBLEMA 06 ===================");
    var count: int = 5;
    delete(count);
endproc;
